--- a/styles/style.css
+++ b/styles/style.css
@@ -6,6 +6,14 @@
 #all-page{
     background-color: #F1F1F3;
 }
+.btn{
+    padding: 17px 34px;
+    color: white;
+    font-weight: 700;
+    background-color: #006A50;
+    border: none;
+    border-radius: 8px;
+}
 header nav{
     width: 70%;
     max-width: 1280px;
@@ -16,6 +24,12 @@ header nav{
     justify-content: space-between;
     align-items: center;
     padding: 24px 0;
+}
+.nav-content a{
+    text-decoration: none;
+    color: white;
+    font-weight: 700;
+    font-size: 20px;
 }
 
 #hero-section{
