pillar of bangladesh section added

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,12 +1,14 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-#all-page{
+
+#all-page {
     background-color: #F1F1F3;
 }
-.btn{
+
+.btn {
     padding: 17px 34px;
     color: white;
     font-weight: 700;
@@ -14,30 +16,34 @@
     border: none;
     border-radius: 8px;
 }
-header nav{
+
+header nav {
     width: 70%;
     max-width: 1280px;
     margin: 0 auto;
 }
-.nav-content{
+
+.nav-content {
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 24px 0;
 }
-.nav-content a{
+
+.nav-content a {
     text-decoration: none;
     color: white;
     font-weight: 700;
     font-size: 20px;
 }
 
-#hero-section{
+#hero-section {
     width: 70%;
     max-width: 1280px;
     margin: 0 auto;
 }
-#hero-section .hero-container{
+
+#hero-section .hero-container {
     background-color: #C6E4D6;
     display: flex;
     gap: 64px;
@@ -45,39 +51,117 @@ header nav{
     align-items: center;
     padding: 80px 60px;
     border-radius: 24px;
-    
+
 }
-.hero-container .hero-content{
+
+.hero-container .hero-content {
     max-width: 622px;
 
 }
+
 .hero-container .hero-content p {
     color: #0e0e0e7a;
     font-size: 24px;
     font-weight: 500;
     margin-bottom: 16px;
 }
+
 .hero-container .hero-content h1 {
-    font-size: 56px;
+    font-size: 3.3rem;
     font-weight: 800;
     color: #0E0E0E;
     margin-bottom: 24px;
 }
-.hero-container .hero-content button{
+
+.hero-container .hero-content button {
     padding: 17px 34px;
     background-color: #006A50;
     border: none;
     border-radius: 8px;
-    
-} 
-.hero-container .hero-content button a{
+
+}
+
+.hero-container .hero-content button a {
     color: white;
     font-size: 18px;
     font-weight: 600;
     text-decoration: none;
 }
 
-.hero-container .hero-png{
+.hero-container .hero-png img {
     max-width: 474px;
+    width: 100%;
 
- }
+}
+
+
+#main-section {
+    max-width: 1280px;
+    margin: 0 auto;
+}
+
+.pillar-of-bd {
+    margin: 80px 0;
+}
+
+.pillar-of-bd h3 {
+    font-size: 2.4rem;
+    font-weight: 700;
+    color: #0E0E0E;
+    margin-bottom: 2rem;
+}
+
+.pillar {
+    max-width: 302px;
+    box-shadow: 0px 0px 4px 2px rgba(14, 14, 14, 0.15);
+    border-radius: 16px;
+}
+
+.pillar-container div {
+    padding: 24px;
+}
+
+.pillar-container div img {
+    max-width: 64px;
+    width: 100%;
+    margin-bottom: 24px;
+}
+
+.pillar-container div h4 {
+    font-size: 1.4rem;
+    font-weight: 700;
+    color: #0E0E0E;
+}
+
+.pillar-container div p {
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 24px;
+    margin-top: 12px;
+}
+
+.pillar-container {
+    display: flex;
+    justify-content: space-between;
+
+}
+
+
+/* style for small device  */
+@media screen and (max-width: 576px) {
+
+    .nav-content,
+    .hero-container,
+    .pillar-container {
+        flex-direction: column;
+
+    }
+
+    .pillar-container {
+        align-items: center;
+        gap: 12px;
+
+    }
+
+    
+}
