--- a/styles/style.css
+++ b/styles/style.css
@@ -336,7 +336,7 @@ header nav {
 
 .Satellite .satellite-img img {
     border-radius: 24px;
-    width: 100%;
+    max-width: 408px;
 }
 
 .Satellite .satellite-content h3 {
@@ -412,12 +412,16 @@ header nav {
 
     }
 
-    #recent-news{
+    #recent-news {
         padding: 20px;
     }
 
     .Satellite {
         flex-direction: column;
         gap: 32px;
+    }
+
+    .Satellite .satellite-img img {
+        width: 100%;
     }
 }
