--- a/styles/style.css
+++ b/styles/style.css
@@ -395,8 +395,24 @@ header nav {
     box-shadow: 1px 0px 2px 1px rgba(14, 14, 14, 0.15);
 }
 
-.footer{
-    
+/* footer section  */
+
+.Newsletter-section{
+    background-color: #C6E4D6;
+    max-width: 1280px;
+    margin: 0 auto;
+    border-radius: 24px;
+    margin-bottom: 80px;
+}
+.Newsletter-container{
+    padding: 80px 0px;
+    text-align: center;
+}
+.Newsletter-container input{
+    width: 600px;
+    padding: 18px ;
+    border: none;
+    outline: none;
 }
 
 
