--- a/styles/style.css
+++ b/styles/style.css
@@ -121,7 +121,12 @@ header nav {
     box-shadow: 0px 0px 4px 2px rgba(14, 14, 14, 0.15);
     border-radius: 16px;
 }
-
+.pillar:hover{
+    transform: scale(1.05);
+    transition: all 0.5s ease-out;
+    background-color: #ceba8c;
+    cursor: pointer;
+}
 .pillar-container div {
     padding: 24px;
 }
@@ -178,10 +183,17 @@ header nav {
     margin-bottom: 32px;
 }
 
+
 .card {
     max-width: 410px;
     background-color: rgba(84, 144, 245, 0.2);
     border-radius: 16px;
+}
+
+.card:hover{
+    transform: scale(1.05);
+    transition: all 0.05s ease-in;
+    cursor: pointer;
 }
 
 .card-2 {
@@ -222,6 +234,11 @@ header nav {
     border-radius: 8px;
     background-color: #5490F5;
     color: #FFFFFF;
+}
+.btn:hover{
+    transform: scale(1.05);
+    transition: all;
+    cursor: pointer;
 }
 
 .btn-2 {
@@ -385,6 +402,12 @@ header nav {
     border: 1px solid rgba(14, 14, 14, 0.15);
 }
 
+.money-card:hover{
+    transform: scale(1.1);
+    transition: all 0.5s ease-in;
+    cursor: pointer;
+}
+
 .donate-section input {
     width: 100%;
     padding: 20px 0px;
@@ -429,6 +452,12 @@ footer ul{
 footer ul li{
     list-style: none;
     max-width: 24px;
+}
+
+footer ul li a i:hover{
+    transform: scale(1.1);
+    transition: all ease;
+    filter: grayscale(100%);
 }
 .footer-content{
     max-width: 1240px;
@@ -519,5 +548,17 @@ footer ul li{
         grid-template-columns: repeat(2, 1fr);
         gap: 24px;
         margin-bottom: 32px;
+    }
+    .Newsletter-section{
+        margin: 10px;
+    }
+    #Opinion-section{
+        padding: 10px;
+    }
+    #vision{
+        margin: 10px;
+    }
+    .pillar-of-bd .card-title h3{
+        text-align: center;
     }
 }
